Small CSS fix on z-index

--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -79,7 +79,6 @@ main{
     left: 50%;
     transform: translate(-50%, -50%);
     pointer-events: none;
-    z-index: 999;
 }
 
 .page.editable .sticker:hover:not(.dragging) .action{
